[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Graphics/Sprites/Objects/Button/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Graphics/Background/Menu/title.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/UI/ui_start.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/Mario/mario_smash.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/Mario/cappy.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Start"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 0.420448, 1 ),
"update": 0,
"values": [ Vector2( -640, 321 ), Vector2( -640, 321 ), Vector2( 89, 321 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Title:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.1, 1.2, 1.3, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 2.37841, 2.54912, 2.37841, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0.6, 0.6 ), Vector2( 0.53, 0.53 ), Vector2( 0.45, 0.45 ), Vector2( 0.420374, 0.420374 ), Vector2( 0.420374, 0.420374 ), Vector2( 0.420374, 0.420374 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SFXTitle:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SFXMenu:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "getMenu"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1, 1.5 ),
"transitions": PoolRealArray( 2.07053, 1, 1.03526, 1 ),
"update": 0,
"values": [ Vector2( 89, 321 ), Vector2( 89, 321 ), Vector2( -640, 330 ), Vector2( -640, 330 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFXStartGame:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/VBoxContainer/Start:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 0.450625, 3.03143, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 64, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SFXMenu:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Sprite" parent="CanvasLayer"]
position = Vector2( 635, 149 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = -640.0
margin_top = 321.0
margin_right = -102.0
margin_bottom = 587.0
rect_rotation = -1.23946
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" parent="CanvasLayer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 538.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Option")
text = "START"

[node name="Option" parent="CanvasLayer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 90.0
margin_right = 538.0
margin_bottom = 176.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Quit")
text = "OPTION"

[node name="Quit" parent="CanvasLayer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 180.0
margin_right = 538.0
margin_bottom = 266.0
focus_neighbour_top = NodePath("../Option")
focus_neighbour_bottom = NodePath("../Start")
text = "EXIT"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 1 )
anims/getMenu = SubResource( 2 )

[node name="SFXStartGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="SFXMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="SFXTitle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
